--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,27 @@
-<h1>Make your form here</h1>
+<h1> Pirates form</h1>
+
+<form action="/pirates" method="post">
+  <label for="name">Pirate Name:</label>
+  <input type="text" id="Pirate name" name="pirate[name]">
+  <label for="weight">Weight: </label>
+  <input type="text" id="weight" name="pirate[weight]">
+  <label for="weight">Height: </label>
+  <input type="text" id="height" name="pirate[height]"><br>
+
+  <h2>Ship(s)</h2>
+  <label for="ship_name_1">Name</label><br>
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_type_1">Type</label><br>
+  <input id="ship_type_1" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_1">Booty</label><br>
+  <input id="ship_booty_1" type="text" name="pirate[ships][][booty]" /><br><br>
+
+  <label for="ship_name_2">Name</label><br>
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_type_2">Type</label></br>
+  <input id="ship_type_2" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_2">Booty</label><br>
+  <input id="ship_booty_2" type="text" name="pirate[ships][][booty]" /><br>
+
+  <input id='Submit' type="submit">
+</form>
