--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,20 @@
 <h1>Display your Pirate here</h1>
 
+<div class='pirate'>
+  <h2>Pirate Name: <%@pirates.name %></h2><br>
+  <h3>Weight: <%=@pirates.weight %></h3><br>
+  <h3>Height: <%=@pirates.height %></h3><br>
 
-<h2>Display your first ship here</h2>
+</div><br>
+
+<h2>Ship 1</h2>
+<% @ships.each do |ships| %>
+  <div class="ship">
+    <p>Name: <%= ships.name %></p><br>
+    <p>Type: <%= ships.type %></p><br>
+    <p>Booty: <%= ships.booty %></p><br>
+  </div><br>
+<% end %>
 
 
 <h2>Display your second ship here</h2>
