--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,7 @@
 <h1>Display your Pirate here</h1>
 
 <div class='pirate'>
-  <h2>Name: Ian</h2><br>
+  <h2>Name: <%=@pirates.name %></h2><br>
   <h3>Weight: <%=@pirates.weight %></h3><br>
   <h3>Height: <%=@pirates.height %></h3><br>
 
